<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="70dp"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="40dp">


            <TextView
                android:id="@+id/usernameText"
                style="@style/AuthSubtitle"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/emailEdit"
                style="@style/AuthEdit"/>


            <TextView
                android:id="@+id/emailText"
                style="@style/AuthSubtitle"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/usernameEdit"
                style="@style/AuthEdit"/>


            <TextView
                android:id="@+id/passwordText"
                android:text="@string/password"
                style="@style/AuthSubtitle"/>

            <EditText
                android:id="@+id/passwordEdit"
                style="@style/AuthEdit"/>


            <TextView
                android:id="@+id/passwordAgainText"
                android:text="@string/passwordAgain"
                style="@style/AuthSubtitle"/>

            <EditText
                android:id="@+id/passwordAgainEdit"
                style="@style/AuthEdit"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_button"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/have_account"
                    />

                <TextView
                    android:id="@+id/toLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/login"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>